--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
-
-<iframe width="600" height="450" src="https://lookerstudio.google.com/embed/reporting/46625715-352d-4a41-8b20-69f28567ee30/page/77wTD" frameborder="0" style="border:0" allowfullscreen></iframe>
+<!DOCTYPE html>
+<html lang="en>
+<head>
+    <meta charset="UTF-8">
+    <title>Painel</title>
+</head>
+<body>             
+  <iframe width="600" height="450" src="https://lookerstudio.google.com/embed/reporting/46625715-352d-4a41-8b20-69f28567ee30/page/77wTD" frameborder="0" style="border:0" allowfullscreen></iframe>
+</body>
+</html>
