--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en>
 <head>
     <meta charset="UTF-8">
-    <title>Painel</title>
+    <title>Painel</title
+    <style>
+            iframe{
+                widht: 100%;
+                height: 100vh;   
+    </style>
 </head>
 <body>             
-  <iframe width="600" height="450" src="https://lookerstudio.google.com/embed/reporting/46625715-352d-4a41-8b20-69f28567ee30/page/77wTD" frameborder="0" style="border:0" allowfullscreen></iframe>
+  <iframe src="https://lookerstudio.google.com/embed/reporting/46625715-352d-4a41-8b20-69f28567ee30/page/77wTD" frameborder="0" style="border:0" allowfullscreen></iframe>
 </body>
 </html>
