--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Painel</title
     <style>
             iframe{
-                widht: 100%;
+                width: 100%;
                 height: 100vh;
             }
     </style>
