--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en>
 <head>
     <meta charset="UTF-8">
-    <title>Painel</title
+    <title>Painel</title>
     <style>
             iframe{
                 width: 100%;
